--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,16 @@
 /* Import Google Fonts (Roboto Mono and Orbitron) */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&family=Orbitron:wght@500&display=swap');
 
+:root {
+  --primary: ;
+  --secondory: ;
+
+  --colorA: ;
+  --colorB: ;
+}
+
 /* Global Styles */
 body {
-  font-family: 'Roboto Mono', monospace;
   margin: 0;
   display: flex;
   color: hsla(180, 29%, 72%, 0.75);
@@ -18,16 +25,28 @@ svg {
   height: 24px;
 }
 
+.title {
+  margin: 0;
+  font-family: 'Orbitron', Roboto Momo;
+  letter-spacing: 0.25rem;
+  line-height: 1.6rem;
+}
+
+.link {
+  color: white;
+}
+
 /* register Container Styles */
 .container {
   display: block;
   position: relative;
   align-self: center;
   padding: 0.1rem;
-  width: 80%;
+  max-width: 90%;
+  min-width: 80%;
   height: auto;
   background: hsl(180deg 88.18% 56.86%);
-  clip-path: polygon(25px 0%, 100% 0, 100% calc(100% - 25px), calc(100% - 25px) 100%, 0 100%, 0% 25px);
+  clip-path: polygon(24px 0%, 100% 0, 100% calc(100% - 24px), calc(100% - 24px) 100%, 0 100%, 0% 24px);
 }
 
 /* Panel Styles */
@@ -36,10 +55,11 @@ svg {
   position: relative;
   justify-content: center;
   flex-direction: column;
-  padding: 0.75rem;
+  width: calc(100% - 1rem);
+  padding: 0.5rem;
   background: black;
   height: auto;
-  clip-path: polygon(25px 0%, 100% 0, 100% calc(100% - 25px), calc(100% - 25px) 100%, 0 100%, 0% 25px);
+  clip-path: polygon(24px 0%, 100% 0, 100% calc(100% - 24px), calc(100% - 24px) 100%, 0 100%, 0% 24px);
 }
 
 /* Button Styles */
@@ -49,14 +69,14 @@ svg {
   flex-direction: row;
   font-family: 'Electrolize', sans-serif;
   text-align: center;
-  gap: 0.5rem;
+  gap: 0.25rem;
 }
 
 /* Button Styles */
 .button {
   display: flex;
   align-content: center;
-  padding: 0.5rem 0;
+  padding: 0.5rem 0.25rem;
   color: #000000;
   background: #FF0578;
   justify-content: center;
@@ -67,13 +87,13 @@ svg {
 }
 
 .clip-1 {
-  width: 20%;
-  clip-path: polygon(20px 0%, 100% 0, 100% calc(100% - 0px), calc(100% - 20px) 100%, 0 100%, 0% 20px);
+  width: 15%;
+  clip-path: polygon(15px 0%, 100% 0, 100% calc(100% - 0px), calc(100% - 15px) 100%, 0 100%, 0% 15px);
 }
 
 .clip-2 {
-  width: 20%;
-  clip-path: polygon(0px 0%, 100% 0, 100% calc(100% - 20px), calc(100% - 20px) 100%, 0 100%, 0% 20px);
+  width: 15%;
+  clip-path: polygon(0px 0%, 100% 0, 100% calc(100% - 15px), calc(100% - 15px) 100%, 0 100%, 0% 15px);
 }
 
 /* Form Styles */
@@ -113,7 +133,7 @@ form {
   font-size: 1.2rem;
   border: 0.1rem solid hsl(180deg 88.18% 56.86%);
   outline: 0;
-  width: 100%;
+  width: calc(100% - 0.5rem);
   height: 3rem;
 }
 
@@ -165,16 +185,8 @@ svg:hover {
   background: hsl(180deg 88.18% 56.86%);
 }
 
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  /* Your styles for tablets and laptops go here */
-
-  .container {
-    /* Adjust font size for better readability on larger screens */
-    width: 40%;
-  }
-
-  /* Add more styles as needed */
+.link:hover {
+  color: pink;
 }
 
 /* Triangles for Decorative Corners */
@@ -215,7 +227,6 @@ svg:hover {
   border-left: 2.5rem solid transparent;
 }
 
-
 .input-group-2 {
   display: flex;
   justify-content: center;
@@ -238,4 +249,37 @@ svg:hover {
   outline: 0;
   width: 10%;
   height: auto;
+}
+
+@media only screen and (min-width: 768px) {
+
+  /* CSS styles for tablets */
+  .container {
+    /* Adjust font size for better readability on larger screens */
+    max-width: 50%;
+    min-width: 40%;
+  }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  /* Your styles for tablets and laptops go here */
+
+  .container {
+    /* Adjust font size for better readability on larger screens */
+    max-width: 50%;
+    min-width: 40%;
+  }
+
+  /* Add more styles as needed */
+}
+
+@media only screen and (max-width: 768px) {
+
+  /* CSS styles for tablets */
+  .container {
+    /* Adjust font size for better readability on larger screens */
+    max-width: 90%;
+    min-width: 80%;
+  }
 }
